--- a/twisty/AndroidManifest.xml
+++ b/twisty/AndroidManifest.xml
@@ -2,16 +2,16 @@
     package="com.google.twisty">
     <application android:icon="@drawable/app_icon" 
                  android:label="@string/app_name">
-        <activity class="Twisty" android:label="@string/app_name">
+        <activity android:name="Twisty" android:label="@string/app_name">
             <intent-filter>
-                <action android:value="android.intent.action.MAIN" />
-                <category android:value="android.intent.category.LAUNCHER" />
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity class="FileBrowser"
+        <activity android:name="FileBrowser"
                   android:label="@string/open_game_file">
             <intent-filter>
-	        <action android:value="android.intent.action.PICK" />
+	        <action android:name="android.intent.action.PICK" />
 	    </intent-filter>
         </activity>
     </application>
