--- a/twisty/AndroidManifest.xml
+++ b/twisty/AndroidManifest.xml
@@ -2,7 +2,7 @@
     package="com.google.twisty">
     <application android:icon="@drawable/app_icon" 
                  android:label="@string/app_name">
-        <activity android:name="Twisty" android:label="@string/app_name">
+        <activity android:name="Twisty" android:label="@string/app_name" android:configChanges="keyboard|keyboardHidden|orientation">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
