--- a/twisty/AndroidManifest.xml
+++ b/twisty/AndroidManifest.xml
@@ -1,5 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.google.twisty">
+    package="com.google.twisty"
+    android:versionCode="1"
+    android:versionName="0.6">
     <application android:icon="@drawable/app_icon" 
                  android:label="@string/app_name">
         <activity android:name="Twisty" android:label="@string/app_name" android:configChanges="keyboard|keyboardHidden|orientation">
