--- a/twisty/AndroidManifest.xml
+++ b/twisty/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.google.twisty"
+    package="com.google.code.twisty"
     android:versionCode="2"
     android:versionName="0.6.5">
     <application android:icon="@drawable/app_icon" 
