--- a/twisty/AndroidManifest.xml
+++ b/twisty/AndroidManifest.xml
@@ -2,6 +2,7 @@
     package="com.google.code.twisty"
     android:versionCode="4"
     android:versionName="0.8">
+    <uses-sdk android:minSdkVersion="4" />
     <application android:icon="@drawable/app_icon" 
                  android:label="@string/app_name">
         <activity android:name="Twisty" android:label="@string/app_name" android:configChanges="keyboard|keyboardHidden|orientation">
