--- a/twisty/AndroidManifest.xml
+++ b/twisty/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.google.code.twisty"
-    android:versionCode="5"
-    android:versionName="0.81">
+    android:versionCode="6"
+    android:versionName="0.82">
     <uses-sdk android:minSdkVersion="4" />
     <application android:icon="@drawable/app_icon" 
                  android:label="@string/app_name">
@@ -12,4 +12,5 @@
             </intent-filter>
         </activity>
     </application>
+   	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 </manifest> 
