--- a/twisty/AndroidManifest.xml
+++ b/twisty/AndroidManifest.xml
@@ -1,7 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.google.code.twisty"
-    android:versionCode="3"
+    android:versionCode="100"
     android:versionName="2.0">
+    <uses-sdk android:minSdkVersion="4" />
     <application android:icon="@drawable/app_icon" 
                  android:label="@string/app_name">
         <activity 
