Create standard 'Preferences' activity; now able to change font size for main Twisty UI window.  Not yet working for GLK's in-game textview.

--- a/twisty/AndroidManifest.xml
+++ b/twisty/AndroidManifest.xml
@@ -50,6 +50,12 @@
                   android:pathPattern=".*\\.zip"/>
           </intent-filter>
         </activity>
+        
+        <activity
+        	android:name="TwistyPreferenceActivity"
+        	android:label="Twisty Preferences">
+        </activity>
+        
     </application>
     
     <uses-permission android:name="android.permission.INTERNET"/>
