--- a/twisty/AndroidManifest.xml
+++ b/twisty/AndroidManifest.xml
@@ -2,9 +2,14 @@
     package="com.google.code.twisty"
     android:versionCode="100"
     android:versionName="2.0">
-    <uses-sdk android:minSdkVersion="15" />
+    <uses-sdk android:minSdkVersion="7"/>
+    
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    
     <application android:icon="@drawable/app_icon" 
-                 android:label="@string/app_name">
+                 android:label="@string/app_name"
+                 android:allowBackup="true">
         <activity 
         	android:name="Twisty"
         	android:label="@string/app_name"
@@ -57,8 +62,5 @@
         </activity>
         
     </application>
-    
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     
 </manifest> 
