--- a/twisty/AndroidManifest.xml
+++ b/twisty/AndroidManifest.xml
@@ -2,7 +2,7 @@
     package="com.google.code.twisty"
     android:versionCode="100"
     android:versionName="2.0">
-    <uses-sdk android:minSdkVersion="7"/>
+    <uses-sdk android:minSdkVersion="15" android:targetSdkVersion="15"/>
     
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
