--- a/twisty/AndroidManifest.xml
+++ b/twisty/AndroidManifest.xml
@@ -2,7 +2,9 @@
     package="com.google.code.twisty"
     android:versionCode="100"
     android:versionName="2.0">
-    <uses-sdk android:minSdkVersion="15" android:targetSdkVersion="15"/>
+    <uses-sdk
+        android:minSdkVersion="15"
+        android:targetSdkVersion="19"/>
     
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
@@ -10,7 +12,8 @@
     <application android:icon="@drawable/app_icon" 
                  android:label="@string/app_name"
                  android:allowBackup="true">
-        <activity 
+
+        <activity
         	android:name="Twisty"
         	android:label="@string/app_name"
         	android:configChanges="keyboard|keyboardHidden|orientation"
