--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,12 +2,12 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "24.0.3"
+    buildToolsVersion '25.0.0'
 
     defaultConfig {
         applicationId "com.google.code.twisty"
         minSdkVersion 15
-        targetSdkVersion 19
+        targetSdkVersion 23
     }
 
     buildTypes {
@@ -22,3 +22,4 @@ android {
         }
     }
 }
+
