Restart app when stopping interpreter
This unloads and reloads the interpreter library, avoiding any state
related bugs caused by a previous session.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,6 +24,7 @@ android {
 
     dependencies {
         compile "com.android.support:support-v4:25.3.0"
+        compile 'com.jakewharton:process-phoenix:2.0.0'
     }
 }
 
